[metadata]
name = xcsf
version = 1.4.6
description = XCSF learning classifier system: rule-based evolutionary machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xcsf-dev/xcsf
maintainer = Richard Preen
maintainer_email = rpreen@gmail.com
license = GPL-3.0
license_files = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
keywords =
    divide and conquer
    evolutionary algorithm
    genetic programming
    learning classifier system
    least squares
    machine learning
    neural networks
    neuroevolution
    reinforcement learning
    rule-based
    supervised learning
    stochastic gradient descent
    XCS
    XCSF
project_urls =
    Changelog = https://github.com/xcsf-dev/xcsf/CHANGELOG.md
    Documentation = https://github.com/xcsf-dev/xcsf/wiki
    Bug Tracker = https://github.com/xcsf-dev/xcsf/issues
    Discussions = https://github.com/xcsf-dev/xcsf/discussions

[options]
python_requires = >=3.9
zip_safe = False
